--- a/res/layout/activity_map.xml
+++ b/res/layout/activity_map.xml
@@ -9,7 +9,7 @@
 		android:layout_width="fill_parent"    
 		android:layout_height="fill_parent"    
 		android:clickable="true"    
-		android:apiKey="Our key should be inserted here!"
+		android:apiKey="0KOVPMjK1JQQEjn34HOLIE-AvWZJi0cWdfg9F2g"
 />
 
 </RelativeLayout>
